# PaddleCustomDevice

./: .gitignore  README.md  README_en.md  README_ja.md
backends/iluvatar_gpu/: CMakeLists.txt  README.md  README_cn.md  build_inc.sh  build_paddle.sh  clean_paddle.sh  install_paddle.sh  setup.py.in
backends/iluvatar_gpu/common/: cuda_flags.cc
backends/iluvatar_gpu/kernels/cuda_kernels/: abs_grad_kernel_register.cc  abs_kernel_register.cc  accuracy_check_kernel_register.cu  accuracy_kernel.cu  activation_grad_kernel_register.cc  activation_kernel_register.cc  adadelta_kernel_register.cu  adagrad_kernel_register.cu  adam_kernel_register.cu  adamax_kernel_register.cu  adamw_kernel_register.cc  adamw_kernel_row_register.cc  add_n_kernel_register.cu  addmm_grad_kernel_register.cc  addmm_kernel_register.cc  affine_channel_grad_kernel_register.cu  affine_channel_kernel_register.cu  all_gather_kernel_register.cu  all_reduce_kernel_register.cu  all_to_all_kernel_register.cu  allclose_kernel_register.cu  amp_kernel_register.cc  angle_grad_kernel_register.cu  angle_kernel_register.cu  ap_facade_kernel_register.cu  ap_trivial_fusion_begin_kernel_register.cu  ap_trivial_fusion_end_kernel_register.cu  ap_variadic_kernel_register.cu  apply_per_channel_scale_kernel_register.cu  arange_kernel_register.cc  arg_min_max_kernel_register.cc  argsort_grad_kernel_register.cc  argsort_kernel_register.cc  array_grad_kernel_register.cc  array_kernel_register.cu  as_complex_kernel_register.cu  as_real_kernel_register.cu  asgd_kernel_register.cu  assign_kernel_register.cc  assign_pos_kernel_register.cu  (+526 more)
backends/iluvatar_gpu/kernels/ernie_core/: cal_aux_loss_grad_kernel.cu  cal_aux_loss_kernel.cu  expand_modality_expert_id_kernel_register.cc  fused_bias_act_kernel_register.cc  int_bincount.cu  layer_norm_cuda_kernel.cu  layer_norm_cuda_kernel.h  moe_combine_grad_kernel_register.cc  moe_combine_kernel_register.cc  moe_gate_dispatch_grad_kernel.cu  moe_gate_dispatch_kernel_register.cc  moe_gate_dispatch_permute_grad_kernel.cu  moe_gate_dispatch_permute_kernel_register.cc  moe_ops_partial_nosoftmaxtopk_grad_kernel.cu  moe_ops_partial_nosoftmaxtopk_kernel_register.cc  register_build_src_rank_and_local_expert_id_kernel.cu  top_p_sampling_kernel.cu
backends/iluvatar_gpu/kernels/funcs/: layer_norm_impl.cu.h  math_cuda_utils.h  moe_fuse_bwd_op.h  top_k_function_cuda.h
backends/iluvatar_gpu/kernels/gpudnn/: conv_cudnn_v7.h  conv_gpudnn.h  conv_grad_kernel.cu  conv_kernel.cu  conv_transpose_grad_kernel.cu  conv_transpose_kernel.cu  softmax_gpudnn.h
backends/iluvatar_gpu/kernels/impl/: conv_cudnn_impl.h  gammaincc_kernel_impl.h  matmul_kernel_impl.h
backends/iluvatar_gpu/patches/: paddle-corex-test.patch  paddle-corex.patch
backends/iluvatar_gpu/patches/eigen/: Core  Tensor  TensorAssign.h
backends/iluvatar_gpu/runtime/: iluvatar_context.cc  iluvatar_context.h  runtime.cc  runtime_flagcx.cc  runtime_flagcx.h
backends/iluvatar_gpu/tests/: CMakeLists.txt  disabled_test.txt  run_test.sh
backends/iluvatar_gpu/tests/rnn/: convert.py  rnn_numpy.py
backends/iluvatar_gpu/tests/unittests/: test_abs_iluvatar.py  test_addmm_op_iluvatar.py  test_arg_min_max_op_iluvatar.py  test_assign_op_iluvatar.py  test_batch_norm_op_iluvatar.py  test_bfloat16_embedding_iluvatar.py  test_bilinear_interp_v2_op_iluvatar.py  test_bincount_op_iluvatar.py  test_bitwise_op_iluvatar.py  test_blha_get_max_len_op.py  test_bmm_op.py  test_cast_op_iluvatar.py  test_concat_op_iluvatar.py  test_conv2d_op_depthwise_conv_iluvatar.py  test_conv2d_op_iluvatar.py  test_conv2d_transpose_op_depthwise_conv_iluvatar.py  test_conv2d_transpose_op_iluvatar.py  test_conv3d_op_iluvatar.py  test_count_nonzero_api_iluvatar.py  test_cumsum_op_iluvatar.py  test_deformable_conv_op_iluvatar.py  test_einsum_iluvatar.py  test_elementwise_div_op_iluvatar.py  test_empty_op_iluvatar.py  test_fc_op_iluvatar.py  test_flash_attention_iluvatar.py  test_flip_iluvatar.py  test_full_like_op_iluvatar.py  test_full_op_iluvatar.py  test_fused_layernorm_op_iluvatar.py  test_gammaincc_op_iluvatar.py  test_gather_op_iluvatar.py  test_gelu_op_iluvatar.py  test_greater_equal_op_iluvatar.py  test_grid_sampler_op_iluvatar.py  test_layer_norm_op_iluvatar.py  test_layer_norm_op_v2_iluvatar.py  test_max_op_iluvatar.py  test_maximum_op_iluvatar.py  test_nonzero_api_iluvatar.py  (+21 more)
backends/metax_gpu/: CMakeLists.txt  README.md  README_cn.md  build.sh  build_in_metax.sh  build_private_CI.sh  change_patch.sh  compile.sh  env.sh  my_script.lds  requirement.txt  setup.py.in
backends/metax_gpu/cmake/: cutlass.cmake  dgc.cmake  flashattn.cmake  generate_pb.cmake  paddle.cmake  warpctc.cmake  warprnnt.cmake
backends/metax_gpu/common/: flags_declare.cc  utils.cc  utils.h
backends/metax_gpu/kernels/: flags_declare.cu  flash_attn_grad_kernel.cu  metax_context.cc  metax_context.h
backends/metax_gpu/kernels/cuda_kernels/: abs_kernel_register.cu  accuracy_check_kernel_register.cu  accuracy_kernel_register.cu  activation_grad_kernel_register.cu  activation_kernel_register.cc  activation_kernel_register.cu  adadelta_kernel_register.cu  adam_kernel_register.cu  adam_kernel_selected_rows.cu  adamax_kernel_register.cu  adamw_kernel_register.cu  adamw_kernel_row_register.cu  affine_channel_grad_kernel_register.cu  affine_channel_kernel_register.cu  affine_grid_grad_kernel_register.cu  affine_grid_kernel_register.cu  allclose_kernel_register.cu  array_kernel_register.cu  (+530 more)
backends/metax_gpu/passes/: pattern_passes.cc  pattern_passes.h
backends/metax_gpu/patch/: intrinsics.cuh  paddle.patch  top_p_sampling.patch  warpctc.patch
backends/metax_gpu/runtime/: process_cupti_data.cc  process_cupti_data.h  runtime.cc
backends/metax_gpu/tests/: CMakeLists.txt  default.txt  ignore.txt  run_test.sh
backends/musa/: CMakeLists.txt
backends/musa/cmake/: musa.cmake  utils.cmake
backends/musa/runtime/: mccl_handler.cc  mccl_handler.h  mudnn_handler.h  musa_device_handler.cc  musa_device_handler.h  runtime.cc  utils.h
backends/musa/tests/: op.py  op_test.py
backends/musa/tools/: build.sh  compile.sh
(+1158 files in other folders)
